# snap-hello-daemon

./: setup.cfg
snap_hello_daemon/: run.py
