[metadata]
name = hello.world.daemon
summary = daemon that loops and prints hello world
author = Corey Bryant
author-email = coreycbryant@gmail.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    snap_hello_daemon

[entry_points]
console_scripts =
  snap-hello-daemon = snap_hello_daemon.run:main
